Load in default theme json before overrides (#807)
* Load in default theme json before overrides
* Moved theme directory into constants
* Moved zero sound into theme so its not a global
* Moved file util helpers into proper folder for using in tests
* Added theme tests
* Fixed theme to pass all tests
• Theme now has a version, it it is not set in config it uses 1 and the old defaults are used. If it is set, we use the new defaults
• Made load_theme_img part of the class
• Save the json out with version 2 and the version 1 defaults so the user knows more what is going on and can upgrade the values they are using

--- a/themes/Panel Attack Modern/config.json
+++ b/themes/Panel Attack Modern/config.json
@@ -1,10 +1,12 @@
 {
+"version": 2,
 "matchtypeLabel_Scale": 1,
 "matchtypeLabel_Pos": [-18, -34],
 "timeLabel_Scale": 1,
 "timeLabel_Pos": [-4, 2],
 "time_Scale": 0.70,
 "time_Pos": [26, 26],
+"name_Pos": [20, -30],
 "scoreLabel_Scale": 1,
 "scoreLabel_Pos": [104, 25],
 "score_Scale": 0.5,
@@ -16,10 +18,12 @@
 "levelLabel_Scale": 1,
 "levelLabel_Pos": [105, 58],
 "level_Pos": [112, 66],
+"level_Scale": 1,
 "ratingLabel_Scale": 1,
 "ratingLabel_Pos": [0, 140],
 "rating_Scale": 0.5,
 "rating_Pos": [38, 162],
+"spectators_Pos": [547, 460],
 "winLabel_Scale": 1,
 "winLabel_Pos": [10, 190],
 "win_Scale": 0.75,
@@ -58,5 +62,17 @@
 "multibar_frame_Scale": 1,
 "multibar_Pos": [-13, 96],
 "multibar_Scale": 1,
-"multibar_is_absolute": true
+"multibar_is_absolute": true,
+"bg_title_is_tiled": false,
+"bg_title_speed_x": 0,
+"bg_title_speed_y": 0,
+"bg_main_is_tiled": false,
+"bg_main_speed_x": 0,
+"bg_main_speed_y": 0,
+"bg_select_screen_is_tiled": false,
+"bg_select_screen_speed_x": 0,
+"bg_select_screen_speed_y": 0,
+"bg_readme_is_tiled": false,
+"bg_readme_speed_x": 0,
+"bg_readme_speed_y": 0
 }
