Level specific framecap for absolute multibar (#981)
* remove code and assets of relative multibar

* extract calculation of stop time for a stack instance into a separate function

* change stop time calculation so that it's easier to test for different stop time amounts

* eliminate access to volatile stack variables from Stack:calculateStopTime

* adjusted multibar to autoscale based on level

* display surplus invincibility time with a timer

* calculate multibarFrameCount on stack creation

* use quads (doesn't work yet)

* almost figured it out I think

* fix bar offsets more or less

* fix overshoot

* readd relative multibar
add config for leftover time position

* fixed a local redefinition

* fixed comments for multibarframecount calculation

* readded multibar_is_absolute to config

* draw debug on top of other things

* fix config values

* readd frames for relative multibar

* use correct images lol

* update documentation

* undo testing change to prestop bar

* readd healthbar config and add alternative value for relative multibar

* cleanup comments for calculateMultibarFrameCount

--- a/themes/Panel Attack Modern/config.json
+++ b/themes/Panel Attack Modern/config.json
@@ -36,11 +36,12 @@
 "gameover_text_Pos": [640, 620],
 "healthbar_frame_Pos": [-51, -12],
 "healthbar_frame_Scale": 1,
-"healthbar_Pos": [-13, 148],
-"healthbar_Scale": 1,
+"healthbar_Pos": [-39, 68],
+"healthbar_Scale": 0.33,
 "healthbar_Rotate": 0,
-"multibar_Pos": [-13, 96],
+"multibar_Pos": [-12, 589], // edit to [-39, 288] for relative multibar
 "multibar_Scale": 1,
+"multibar_LeftoverTime_Pos": [-19, 5],
 "multibar_is_absolute": true,
 "bg_title_is_tiled": false,
 "bg_title_speed_x": 0,
