enable canary release for beta

--- a/.github/workflows/sceneRefactor-canary-release.yml
+++ b/.github/workflows/sceneRefactor-canary-release.yml
@@ -1,8 +1,8 @@
-name: sceneRefactor-canary-release
+name: canary-release
 on: 
   push:
     branches:
-      - "sceneRefactor"
+      - "beta"
 
 permissions:
   contents: write
