--- a/client/assets/default_data/characters/Magellan/config.json
+++ b/client/assets/default_data/characters/Magellan/config.json
@@ -1,10 +1,11 @@
 {
-"name": "Magellan",
-"id": "PA_Magellan_Test",
-"version": 2,
-"popfx_style": "burst",
-"chain_style":"per_chain",
-"combo_style":"per_combo",
-"music_style": "dynamic",
-"stage": "panel-attack-magellan-day"
+  "name": "Magellan",
+  "id": "PA_Magellan",
+  "version": 2,
+  "popfx_burstRotate": true,
+  "popfx_style": "fadeburst",
+  "chain_style": "per_chain",
+  "combo_style": "per_combo",
+  "music_style": "dynamic",
+  "stage": "panel-attack-magellan-day"
 }
