fix crash when debugging updater startup and comment out super select stage for magellan

--- a/client/assets/default_data/characters/Magellan/config.json
+++ b/client/assets/default_data/characters/Magellan/config.json
@@ -7,5 +7,5 @@
   "chain_style": "per_chain",
   "combo_style": "per_combo",
   "music_style": "dynamic",
-  "stage": "panel-attack-magellan-day"
+  //"stage": "panel-attack-magellan-day"
 }
